# TinyArcs

./: CMakeLists.txt  README.md  Tiny2.cc
include/: Magnets.hh  TA2ConfigParse.hh  TA2Util.hh  TAPhasespace.hh  ThreeVector.hh
src/: Histogramming.cc  Magnets.cc  Magnets2.cc  TA2ConfigParse.cc  TA2Util.cc  TAPhasespace.cc  ThreeVector.cc
